[package]
name = "smart_solar_grid"
version = "0.1.0"
edition = "2021"
authors = ["SolarGridX Team"]
description = "A blockchain-based P2P energy trading platform"

[dependencies]
# Core dependencies
#parity-scale-codec = { version = "3.2.2", features = ["derive"] }
#frame-support = "38.2.0"
#frame-system = "38.0.0"
#sp-runtime = "39.0.5"
#sp-core = "34.0.0"
#sp-std = "14.0.0"
#sp-io = "38.0.0"
#sp-version = "37.0.0"
#
## Async runtime
#tokio = { version = "1.28", features = ["full"] }
#async-trait = "0.1.68"
#
## Serialization
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
#
## Cryptography
#sha2 = "0.10"
#hex = "0.4"
#
## Add this to force all dependencies to use the same version
#parity-util-mem = "0.12.0"

[workspace]
resolver = "2"
members = [
    "pallets/energy-token",
    "pallets/energy-trade",
    "pallets/energy-transfer",
    "pallets/payment-settlement",
    "pallets/price-discovery",
    "node",
    "runtime",
]