[package]
name = "smart_solar_grid"
version = "0.1.0"
edition = "2021"
authors = ["SolarGridX Team"]
description = "A blockchain-based P2P energy trading platform"

[dependencies]
frame-system = "38.0.0"
frame-support = "38.0.0"

[workspace]
resolver = "2"
members = [
    "pallets/energy-token",
    "pallets/energy-trade",
    "pallets/energy-transfer",
    "pallets/payment-settlement",
    "pallets/price-discovery",
    "node",
    "runtime",
]
