[package]
name = "solar-grid-node"
version = "0.1.0"
edition = "2021"
authors = ["SolarGridX Team"]

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
futures = "0.3.21"
log = "0.4.17"
tokio = { version = "1.20.1", features = ["full"] }
sc-cli = { version = "0.10.0", default-features = false }
sc-client-api = { version = "4.0.0", default-features = false }
sc-consensus = { version = "0.10.0", default-features = false }
sc-consensus-aura = { version = "0.10.0", default-features = false }
sc-executor = "0.10.0"
sc-network = "0.10.0"
sc-service = "0.10.0"
sc-telemetry = "4.0.0"
sc-transaction-pool = "4.0.0"
sp-consensus-aura = "0.10.0"
sp-core = "4.0.0"
sp-runtime = "4.0.0"

# Local dependencies
solar-grid-runtime = { path = "../runtime" }

parity-util-mem = "0.12.0"
