[package]
name = "solar-grid-runtime"
version = "0.1.0"
edition = "2021"
authors = ["SolarGridX Team"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
frame-executive = "38.0.0"
frame-support = { version = "38.2.0", default-features = false }
frame-system = { version = "38.0.0", default-features = false }
frame-try-runtime = { version = "0.44.0", default-features = false }
pallet-aura = { version = "^37.0.0", default-features = false }
pallet-balances = { version = "39.0.0", default-features = false }
pallet-grandpa = { version = "38.0.0", default-features = false }
pallet-sudo = { version = "38.0.0", default-features = false }
pallet-timestamp = { version = "^37.0.0", default-features = false }
sp-api = { version = "^34.0.0", default-features = false }
sp-block-builder = { version = "^34.0.0", default-features = false }
sp-consensus-aura = { version = "0.40.0", default-features = false }
sp-core = { version = "^34.0.0", default-features = false }
sp-inherents = { version = "^34.0.0", default-features = false }
sp-offchain = { version = "^34.0.0", default-features = false }
sp-runtime = { version = "39.0.5", default-features = false }
sp-session = { version = "36.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-transaction-pool = { version = "^34.0.0", default-features = false }
sp-version = { version = "37.0.0", default-features = false }

# Local dependencies
pallet-energy-token = { path = "../pallets/energy-token", default-features = false }
pallet-energy-trade = { path = "../pallets/energy-trade", default-features = false }
pallet-user-registry = { path = "../pallets/user-registry", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-try-runtime/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "pallet-energy-token/std",
    "pallet-energy-trade/std",
    "pallet-user-registry/std",
]