[package]
name = "pallet-energy-token"
version = "0.1.0"
edition = "2021"
authors = ["SolarGridX Team"]

[dependencies]
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
frame-support = { version = "38.2.0", default-features = false }
frame-system = { version = "38.0.0", default-features = false }
sp-runtime = { version = "39.0.5", default-features = false }

[dependencies.codec]
package = "parity-scale-codec"
version = "3.6.11"
default-features = false
features = ["derive"]

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
]
