[package]
name = "pallet-payment-settlement"
version = "0.1.0"
edition = "2021"
authors = ["SolarGridX Team"]

[dependencies]
parity-scale-codec = { version = "3.6.12", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
frame-support = { version = "38.0.0", default-features = false }
frame-system = { version = "38.0.0", default-features = false }
sp-runtime = { version = "39.0.3", default-features = false }
sp-io = { version = "38.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
pallet-energy-trade = { path = "../energy-trade", default-features = false }
pallet-balances = { version = "39.0.0", default-features = false }