[package]
name = "pallet-price-discovery"
version = "0.1.0"
edition = "2021"
authors = ["SolarGridX Team"]

[dependencies]
parity-scale-codec = { version = "3.7.0", default-features = false }
scale-info = { version = "2.12.1", default-features = false }
frame-support = { version = "39.0.0", default-features = false }
frame-system = { version = "39.0.0", default-features = false }
sp-runtime = { version = "40.0.0-rc.3", default-features = false }
sp-io = { version = "39.0.0", default-features = false }
sp-std = { version = "15.0.0", default-features = false }
pallet-balances = { version = "40.0.0-rc.3", default-features = false }
pallet-energy-trade = { path = "../energy-trade", default-features = false }
pallet-energy-transfer = { path = "../energy-transfer", default-features = false }

