[package]
name = "pallet-price-discovery"
version = "0.1.0"
edition = "2021"
authors = ["SolarGridX Team"]

[dependencies]
#codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
#scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-support = { version = "38.2.0", default-features = false }
#frame-system = { version = "38.0.0", default-features = false }
#sp-runtime = { version = "6.0.0", default-features = false }
#sp-io = { version = "6.0.0", default-features = false }
#sp-std = { version = "14.0.0", default-features = false }
#pallet-energy-trade = { path = "../energy-trade", default-features = false }
#pallet-energy-transfer = { path = "../energy-transfer", default-features = false }
