[package]
name = "pallet-user-registry"
version = "0.1.0"
edition = "2021"
authors = ["SolarGridX Team"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.7.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.12.0", default-features = false, features = ["derive"] }
frame-support = { version = "39.0.0", default-features = false }
frame-system = { version = "39.0.0", default-features = false }
sp-runtime = { version = "40.0.0", default-features = false }
sp-io = { version = "39.0.0", default-features = false }
sp-std = { version = "15.0.0", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-io/std",
    "sp-std/std",
]
